# actix-web-auth-service

./: .env-example  Cargo.toml
migrations/: 20230509073024_init.up.sql
src/: config.rs  custom_errors.rs  handlers.rs  jwt_auth.rs  lib.rs  main.rs  models.rs  response.rs
src/cookies/: mod.rs
src/db/: mod.rs
src/fingerprint/: mod.rs
src/redis/: mod.rs
src/token/: mod.rs
src/totp/: mod.rs
src/validation/: mod.rs
